# open-grading

./: .dockerignore  LICENSE  README.md
docker/: docker-compose.yaml  ogr-backend.Dockerfile  ogr-frontend.Dockerfile
nginx/: nginx.conf
ogr-backend/: .gitignore  pyproject.toml
ogr-backend/ogr/: logging.conf  main.py
ogr-backend/ogr/config/: __init__.py  logging.conf
ogr-backend/ogr/db/: __init__.py  grade_system.py  user.py
ogr-backend/ogr/models/: grade_system.py  user.py  user_tag.py
ogr-backend/ogr/routes/: grade_systems.py  users.py
ogr-backend/prisma/: schema.prisma
ogr-backend/prisma/migrations/20230323091001_initial_migration/: migration.sql
ogr-backend/prisma/migrations/20230323093106_add_count_to_review_template/: migration.sql
ogr-backend/prisma/migrations/20230323102132_add_data_field/: migration.sql
ogr-backend/prisma/migrations/20230323105403_drop_unused_fields/: migration.sql
ogr-backend/prisma/migrations/20230326165814_create_grade_system/: migration.sql
ogr-backend/prisma/migrations/20230326171813_make_grade_variant_independant_from_grade_system/: migration.sql
ogr-frontend/: .gitignore  package-lock.json  package.json
ogr-frontend/src/: App.tsx  main.tsx
ogr-frontend/src/app/: router.ts
ogr-frontend/src/app/fetcher/: store.ts
ogr-frontend/src/pages/: HomePage.tsx  UserProfile.tsx
ogr-frontend/src/shared/api/: index.ts
ogr-frontend/src/shared/breadcrumb/: model.ts  store.ts
ogr-frontend/src/shared/fetcher/: store.ts
ogr-frontend/src/shared/hooks/: useNarrowLayout.ts
ogr-frontend/src/shared/tag/: model.ts
(+20 files in other folders)
