[tool.poetry]
name = "ogr-backend"
version = "0.1.0"
description = "Open Grading Backend is an api service for Open Grading project"
authors = ["sintell <uyiiio@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = {extras = ["email"], version = "^1.10.6"}

[tool.poetry.group.dev.dependencies]
prisma = "^0.8.2"
pytest = "^7.2.2"
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"
